feat : 사진분석 모델에 해당하는 칭호 저장 및 정렬 방식 수정